--- a/plugins/annotorious-toolbar/public/index.html
+++ b/plugins/annotorious-toolbar/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Annotorious | Toolbar</title>
-    <script src="openseadragon-bin-2.4.2/openseadragon.min.js"></script>
+    <script src="openseadragon-bin-3.0.0/openseadragon.3.0.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/openseadragon-annotorious.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@recogito/annotorious-openseadragon@latest/dist/annotorious.min.css">
 
@@ -35,7 +35,7 @@
 
         // Initialize Annotorious
         var anno = OpenSeadragon.Annotorious(viewer);
-        Annotorious.Toolbar(anno, document.getElementById('toolbar-container'));
+        Annotorious.Toolbar(anno, document.getElementById('toolbar-container'), { withMouse: true });
       }
     </script>
   </body>
